@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Devel-REPL
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-REPL/ChangeLog,v 1.13 2010/09/28 08:47:29 tove Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Devel-REPL/ChangeLog,v 1.14 2011/01/14 17:54:23 tove Exp $
+
+  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Devel-REPL-1.003011.ebuild:
+  Cleanup
 
 *Devel-REPL-1.003012 (28 Sep 2010)
 
